--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,10 @@
   <a routerLink="/dashboard">Dashboard</a>
   <a routerLink="/heroes">Heroes</a>
 </nav>
+<app-swiper
+  [swiperList]="swiperList"
+  [slidesPerView]="slidesPerView"
+>
+</app-swiper>
 <router-outlet></router-outlet>
 <app-messages></app-messages>
