マイクロモーダルの導入

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,5 +8,6 @@
   [slidesPerView]="slidesPerView"
 >
 </app-swiper>
+<app-micromodal></app-micromodal>
 <router-outlet></router-outlet>
 <app-messages></app-messages>
